--- a/patient.html
+++ b/patient.html
@@ -7,6 +7,15 @@
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/crypto-js.min.js"></script>
   <link rel="stylesheet" href="style.css">
+  <style>
+    body { font-family: Arial, sans-serif; background: #f4f4f9; margin: 0; padding: 0; }
+    .container { max-width: 800px; margin: 30px auto; background: #fff; padding: 20px; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
+    h2, h3, h4 { color: #333; }
+    ul { list-style: none; padding-left: 0; }
+    li { margin-bottom: 8px; }
+    button { margin-left: 10px; cursor: pointer; }
+    input, button { padding: 6px; margin: 5px 0; }
+  </style>
 </head>
 <body>
   <div class="container">
@@ -26,13 +35,36 @@
 
     <h3>📄 Uploaded Reports:</h3>
     <ul id="fileList"></ul>
+
+    <h3>🏥 Patient Visits</h3>
+    <ul id="visitList"></ul>
+    <h4>Add Visit</h4>
+    <input type="text" id="visitReason" placeholder="Reason">
+    <input type="text" id="visitDoctor" placeholder="Doctor">
+    <input type="date" id="visitDate">
+    <button id="addVisitBtn">Add Visit</button>
+
+    <h3>💊 Previous Medicines</h3>
+    <ul id="medicineList"></ul>
+    <h4>Add Medicine</h4>
+    <input type="text" id="medName" placeholder="Medicine Name">
+    <input type="text" id="medDosage" placeholder="Dosage">
+    <input type="date" id="medStartDate">
+    <button id="addMedBtn">Add Medicine</button>
+
+    <h3>🧪 Test Results</h3>
+    <ul id="testList"></ul>
+    <h4>Add Test Result</h4>
+    <input type="text" id="testName" placeholder="Test Name">
+    <input type="text" id="testResult" placeholder="Result">
+    <input type="date" id="testDate">
+    <button id="addTestBtn">Add Test</button>
   </div>
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
     import { getDatabase, ref, get, set } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
 
-    // --- Firebase Configuration ---
     const firebaseConfig = {
       apiKey: "AIzaSyBXkOoo0jwYkDwnLrnWPhViogFGpPgKidk",
       authDomain: "digitalpassport-8c226.firebaseapp.com",
@@ -46,19 +78,18 @@
     const app = initializeApp(firebaseConfig);
     const db = getDatabase(app);
 
-    // --- Extract Patient ID from URL ---
     const urlParams = new URLSearchParams(window.location.search);
     const patientId = urlParams.get("id");
 
-    // --- Load Patient Details ---
+    // --- Load Patient Data ---
     async function loadPatientData() {
       const snapshot = await get(ref(db, 'patients/' + patientId));
       if (snapshot.exists()) {
         const data = snapshot.val();
-        document.getElementById('pName').innerText = data.name;
-        document.getElementById('pAge').innerText = data.age;
-        document.getElementById('pBlood').innerText = data.blood;
-        document.getElementById('pDisease').innerText = data.disease;
+        document.getElementById('pName').innerText = data.name || "-";
+        document.getElementById('pAge').innerText = data.age || "-";
+        document.getElementById('pBlood').innerText = data.blood || "-";
+        document.getElementById('pDisease').innerText = data.disease || "-";
       } else {
         alert("Patient not found!");
       }
@@ -66,25 +97,18 @@
 
     loadPatientData();
 
-    // --- Upload PDF as Base64 + SHA-256 Hash ---
+    // --- Upload PDF ---
     document.getElementById('uploadBtn').addEventListener('click', async () => {
       const file = document.getElementById('fileUpload').files[0];
-      if (!file) {
-        alert("Please select a file first!");
-        return;
-      }
+      if (!file) return alert("Please select a file!");
 
       const reader = new FileReader();
-      reader.onload = async function(e) {
+      reader.onload = async (e) => {
         const base64PDF = e.target.result;
-
-        // Generate SHA-256 hash
         const wordArray = CryptoJS.enc.Latin1.parse(atob(base64PDF.split(',')[1]));
         const hash = CryptoJS.SHA256(wordArray).toString(CryptoJS.enc.Hex);
-
         const reportKey = file.name.replace(/\./g, '_');
 
-        // Save in Realtime Database
         await set(ref(db, `patients/${patientId}/reports/${reportKey}`), {
           fileName: file.name,
           base64: base64PDF,
@@ -95,11 +119,10 @@
         document.getElementById('uploadStatus').innerText = "✅ Upload successful!";
         loadReports();
       };
-
       reader.readAsDataURL(file);
     });
 
-    // --- Load and Display Reports ---
+    // --- Load Reports ---
     async function loadReports() {
       const snapshot = await get(ref(db, `patients/${patientId}/reports`));
       const fileList = document.getElementById('fileList');
@@ -118,15 +141,13 @@
           fileList.appendChild(li);
         }
 
-        // Add Verify button functionality
         document.querySelectorAll('.verify-btn').forEach(button => {
-          button.addEventListener('click', (event) => {
+          button.addEventListener('click', () => {
             const base64 = button.dataset.base64;
             const storedHash = button.dataset.hash;
             const wordArray = CryptoJS.enc.Latin1.parse(atob(base64.split(',')[1]));
             const calculatedHash = CryptoJS.SHA256(wordArray).toString(CryptoJS.enc.Hex);
             const statusEl = button.nextElementSibling;
-
             if (calculatedHash === storedHash) {
               statusEl.style.color = 'green';
               statusEl.innerText = "✅ Verified";
@@ -141,7 +162,107 @@
       }
     }
 
+    // --- Load Visits ---
+    async function loadVisits() {
+      const snapshot = await get(ref(db, `patients/${patientId}/visits`));
+      const visitList = document.getElementById('visitList');
+      visitList.innerHTML = "";
+
+      if (snapshot.exists()) {
+        const visits = snapshot.val();
+        for (const key in visits) {
+          const visit = visits[key];
+          const li = document.createElement('li');
+          li.innerText = `${new Date(visit.date).toLocaleDateString()} - ${visit.reason} (Dr. ${visit.doctor})`;
+          visitList.appendChild(li);
+        }
+      } else {
+        visitList.innerHTML = "<li>No visits recorded.</li>";
+      }
+    }
+
+    document.getElementById('addVisitBtn').addEventListener('click', async () => {
+      const reason = document.getElementById('visitReason').value;
+      const doctor = document.getElementById('visitDoctor').value;
+      const date = new Date(document.getElementById('visitDate').value).getTime();
+      if (!reason || !doctor || !date) return alert("Please fill all fields");
+
+      await set(ref(db, `patients/${patientId}/visits/${Date.now()}`), { reason, doctor, date });
+      document.getElementById('visitReason').value = '';
+      document.getElementById('visitDoctor').value = '';
+      document.getElementById('visitDate').value = '';
+      loadVisits();
+    });
+
+    // --- Load Medicines ---
+    async function loadMedicines() {
+      const snapshot = await get(ref(db, `patients/${patientId}/medicines`));
+      const medicineList = document.getElementById('medicineList');
+      medicineList.innerHTML = "";
+
+      if (snapshot.exists()) {
+        const meds = snapshot.val();
+        for (const key in meds) {
+          const med = meds[key];
+          const li = document.createElement('li');
+          li.innerText = `${med.name} - ${med.dosage} (Started: ${new Date(med.startDate).toLocaleDateString()})`;
+          medicineList.appendChild(li);
+        }
+      } else {
+        medicineList.innerHTML = "<li>No medicines recorded.</li>";
+      }
+    }
+
+    document.getElementById('addMedBtn').addEventListener('click', async () => {
+      const name = document.getElementById('medName').value;
+      const dosage = document.getElementById('medDosage').value;
+      const startDate = new Date(document.getElementById('medStartDate').value).getTime();
+      if (!name || !dosage || !startDate) return alert("Fill all medicine fields");
+
+      await set(ref(db, `patients/${patientId}/medicines/${Date.now()}`), { name, dosage, startDate });
+      document.getElementById('medName').value = '';
+      document.getElementById('medDosage').value = '';
+      document.getElementById('medStartDate').value = '';
+      loadMedicines();
+    });
+
+    // --- Load Test Results ---
+    async function loadTests() {
+      const snapshot = await get(ref(db, `patients/${patientId}/testResults`));
+      const testList = document.getElementById('testList');
+      testList.innerHTML = "";
+
+      if (snapshot.exists()) {
+        const tests = snapshot.val();
+        for (const key in tests) {
+          const test = tests[key];
+          const li = document.createElement('li');
+          li.innerText = `${test.testName} - ${test.result} (${new Date(test.date).toLocaleDateString()})`;
+          testList.appendChild(li);
+        }
+      } else {
+        testList.innerHTML = "<li>No test results recorded.</li>";
+      }
+    }
+
+    document.getElementById('addTestBtn').addEventListener('click', async () => {
+      const testName = document.getElementById('testName').value;
+      const result = document.getElementById('testResult').value;
+      const date = new Date(document.getElementById('testDate').value).getTime();
+      if (!testName || !result || !date) return alert("Fill all test fields");
+
+      await set(ref(db, `patients/${patientId}/testResults/${Date.now()}`), { testName, result, date });
+      document.getElementById('testName').value = '';
+      document.getElementById('testResult').value = '';
+      document.getElementById('testDate').value = '';
+      loadTests();
+    });
+
+    // --- Initial Load ---
     loadReports();
+    loadVisits();
+    loadMedicines();
+    loadTests();
   </script>
 </body>
 </html>
